--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Saját weboldal</h1> 
-   <p>Változás a branch2 ágon</p>
+   <p>bekezdés átírása a főágon</p>
 </body>
 </html>
 <!DOCTYPE html>
