commit a branch3 űgon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>cím</h1>
-    <p>Bekezdést átírtam</p>
+   <H2>ujabb váltzoztatás</H2>
 
 </body>
 </html>
